-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 18.0.0 (18.0 branch)
-
None
-
-
bb2f7ea95 (master)
Tools->Git->Current File->Blame For (filename)
Click on the commit-id of a line
1 QTextLine::naturalTextRect() const 0x7ffff62db3ad 2 DiffEditor::Internal::SideDiffEditorWidget::paintSeparator sidebysidediffeditorwidget.cpp 454 0x7fff9bb713c7 3 DiffEditor::Internal::SideDiffEditorWidget::paintEvent sidebysidediffeditorwidget.cpp 580 0x7fff9bb721df 4 QWidget::event(QEvent *) 0x7ffff69f26c5 5 QFrame::event(QEvent *) 0x7ffff6a9cfca 6 TextEditor::TextEditorWidget::viewportEvent texteditor.cpp 5037 0x7fffa98c2fe2 7 QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject *, QEvent *) 0x7ffff537e0e8 8 QApplicationPrivate::notify_helper(QObject *, QEvent *) 0x7ffff69980b8 9 QCoreApplication::notifyInternal2(QObject *, QEvent *) 0x7ffff53813f0 10 QWidgetPrivate::sendPaintEvent(QRegion const&) 0x7ffff69e1d04 11 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e438d 12 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 13 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 14 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 15 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 16 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 17 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 18 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 19 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 20 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 21 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 22 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 23 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 24 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 25 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 26 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 27 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 28 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 29 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 30 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 31 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 32 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 33 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 34 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 35 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 36 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 37 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 38 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 39 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 40 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 41 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 42 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 43 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 44 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 45 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 46 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 47 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 48 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 49 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 50 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 51 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6e24 52 QWidgetPrivate::paintSiblingsRecursive(QPaintDevice *, QList<QObject *> const&, int, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e6c47 53 QWidgetPrivate::drawWidget(QPaintDevice *, QRegion const&, QPoint const&, QFlags<QWidgetPrivate::DrawWidgetFlag>, QPainter *, QWidgetRepaintManager *) 0x7ffff69e3fbd 54 QWidgetRepaintManager::paintAndFlush() 0x7ffff6a06a9f 55 QWidget::event(QEvent *) 0x7ffff69f214a 56 QApplicationPrivate::notify_helper(QObject *, QEvent *) 0x7ffff69980c8 57 QCoreApplication::notifyInternal2(QObject *, QEvent *) 0x7ffff53813f0 58 QCoreApplicationPrivate::sendPostedEvents(QObject *, int, QThreadData *) 0x7ffff53817df 59 ?? 0x7ffff55e92cf 60 ?? 0x7ffff58f7de2 61 ?? 0x7ffff59691f8 62 g_main_context_iteration 0x7ffff58f8223 63 QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) 0x7ffff55e6c63 64 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) 0x7ffff538bd5b 65 QCoreApplication::exec() 0x7ffff5384f7e 66 main main.cpp 1024 0x555555567e38