diffeditor: Fix crash by fetching editorLayout from the right source

Fixes: QTCREATORBUG-33230
Change-Id: I4cc2d66ba49a3c8fa41382045bc37be1ea232c8d
Reviewed-by: André Hartmann <aha_1980@gmx.de>
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
Reviewed-by: Philip Van Hoof <philip@codeminded.be>